[gd_scene load_steps=4 format=2]

[ext_resource path="res://MainNavigation/UIMainButtons.tscn" type="PackedScene" id=1]
[ext_resource path="res://MainNavigation/InventoryScreen.gd" type="Script" id=2]
[ext_resource path="res://SPRITES/zMisc/Circle500px.png" type="Texture" id=3]

[node name="InventoryScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
Path_group_items = NodePath("Items/GridContainer")
Path_group_info = NodePath("Info")

[node name="BG" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.333333, 0.223529, 0.152941, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="ColorRect" parent="Info"]
margin_right = 388.0
margin_bottom = 720.0
mouse_filter = 2
color = Color( 0.32549, 0.160784, 0.0980392, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="Info"]
margin_left = 218.243
margin_right = 389.243
margin_bottom = 171.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="Info"]
margin_left = 20.0
margin_top = 20.0
margin_right = 232.0
margin_bottom = 156.0

[node name="Description" type="RichTextLabel" parent="Info"]
margin_left = 20.0
margin_top = 171.0
margin_right = 375.0
margin_bottom = 680.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActionButton" type="Button" parent="Info"]
visible = false
margin_top = 573.97
margin_right = 388.0
margin_bottom = 719.97
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UIMainButtons" parent="." instance=ExtResource( 1 )]

[node name="Items" type="ScrollContainer" parent="."]
margin_left = 403.0
margin_right = 1043.0
margin_bottom = 720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="Items"]
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 5

[connection signal="pressed" from="Info/ActionButton" to="." method="pressAction"]
[connection signal="pressed" from="UIMainButtons/BackButton" to="." method="backToMain"]
[connection signal="pressed" from="UIMainButtons/CharacterButton" to="." method="gotoCharacterChooseScreen"]

[editable path="UIMainButtons"]
